fixed spacing issue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,7 +18,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  /*box-shadow: 0 0 3px 0 rgba(255, 0, 255, 0.3);*/
+  box-shadow: 0 0 3px 0 rgba(255, 0, 255, 0.3);
 }
 
 html,
@@ -269,7 +269,7 @@ h2 {
 }
 
 .post {
-  padding: 1rem 0;
+  /*padding: 1rem 0;*/
 }
 
 .post + .post {
@@ -334,6 +334,10 @@ h2 {
 
 .single-post {
   grid-column: 1 / 3;
+}
+
+.single-post h2 {
+  margin: 0 0 1rem 0;
 }
 
 .single-post__body img {
